compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_tuple_pattern_discard_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1356
expression: "let #(a, _secondValue) = #(1, 2)"
snapshot_kind: text
---
----- SOURCE CODE
let #(a, _secondValue) = #(1, 2)

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:10
  │
1 │ let #(a, _secondValue) = #(1, 2)
  │          ^^^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _second_value
